feat: populating database and fix relation in movie & genry