@@ -1,4 +1,4 @@
-package softeng.cinecritique.infraestructure.mapper;
+package softeng.cinecritique.infraestructure.gateways.mapper;
 
 import org.springframework.data.domain.Page;
 import softeng.cinecritique.app.domain.Movie;
@@ -16,18 +16,16 @@ public class MovieEntityMapper {
 
     public static MovieEntity toEntity(Movie movieModel){
         return new MovieEntity(movieModel.getId(), movieModel.getName(), movieModel.getDescription(),movieModel.getFilmedAt(),movieModel.getCreatedAt(),
-                movieModel.getGenres().stream().map(GenreEntityMapper::toEntity).collect(Collectors.toSet()));
+                movieModel.getGenres().stream().map(GenreEntityMapper::toEntity).toList(), movieModel.getRates().stream().map(MovieRateEntityMapper::toEntity).toList());
     }
 
 
-    public static MovieEntity toEntityWithoutGenre(Movie movieModel){
-        return new MovieEntity(movieModel.getId(), movieModel.getName(),movieModel.getDescription(),movieModel.getFilmedAt(),movieModel.getCreatedAt(), null);
-    }
+
     public static Movie toModel(MovieEntity entity){
         return new Movie(entity.getId(), entity.getName(),entity.getDescription(), entity.getCreatedAt(),entity.getFilmedAt(),
-                entity.getGenres().stream().map(GenreEntityMapper::toModel).collect(Collectors.toList()));
+                entity.getGenres().stream().map(GenreEntityMapper::toModel).collect(Collectors.toList()), entity.getRates().stream().map(MovieRateEntityMapper::toModel).toList());
     }
-    public static  Movie toModelWithoutGenre(MovieEntity entity){
-        return new Movie(entity.getId(), entity.getName(),entity.getDescription(), entity.getCreatedAt(),entity.getFilmedAt(), null);
+    public static  Movie toModelWithoutGenreAndRate(MovieEntity entity){
+        return new Movie(entity.getId(), entity.getName(),entity.getDescription(), entity.getCreatedAt(),entity.getFilmedAt(), null, null);
     }
 }
